# azure-playground

./: .gitignore  pyproject.toml
cosmos-db/: basic_operations.ipynb
